--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@linear/sdk": "^29.0.0",
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "@types/bun": "latest"
   }
 }
