Add ask-questions-if-underspecified skill, make registry/ a build artifact

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 node_modules/
 bun.lock
 
+# Build output
+registry/
+.astro/
+docs/.astro/
+
 # Source build artifacts
 src/linear/node_modules/
 
