--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-grab": "^0.0.98",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.1.18"
   },
