--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.3.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-grab": "^0.0.98",
