Fix Cloudflare cache purge to trigger on new Pages workflow

--- a/.github/workflows/purge-cache.yml
+++ b/.github/workflows/purge-cache.yml
@@ -3,7 +3,7 @@ name: Purge Cloudflare Cache
 on:
   # Trigger after GitHub Pages deployment completes
   workflow_run:
-    workflows: ["pages-build-deployment"]
+    workflows: ["Deploy Docs to GitHub Pages"]
     types:
       - completed
   workflow_dispatch:
